--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // Fabric Crashlytics
-        classpath 'io.fabric.tools:gradle:1+'
+        classpath 'io.fabric.tools:gradle:1.27.1'
     }
 }
 
