--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,16 +5,16 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/ic_launcher"
+        android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
         <!-- Fabric Crashlytics -->
         <meta-data
             android:name="io.fabric.ApiKey"
-            android:value="API_KEY_FROM_FABRIC_IO" />
+            android:value="81581786a6920eba52c12e24e59c78efa23a6263" />
 
         <activity android:name=".view.Main">
             <intent-filter>
